added product index page

--- a/camera.html
+++ b/camera.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>OMPIXS - About</title>
+  <title>OMPIXS - Cameras</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,13 +69,13 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profile.html">Profile</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="camera.html" id="dropdownId"
+                <a class="nav-link active" href="camera.html" id="dropdownId"
                   aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
                   <div class="abs-dropicon d-lg-none">
                     <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
@@ -132,158 +132,171 @@
 
   <main>
 
-    <div class="other-banners">
+    <section class="product-index">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-md-7">
-            <h1 class="text-barlow text-uppercase"><span class="text-green">About</span> <span class="text-white">Ompixs</span></h1>
-            <p class="text-white">From concept to delivery, Optical Motion Pictures offers full production services that can be tailored to fit all budgets and requirements necessary!</p>
-        </div>
-        </div>
-        </div>
-    </div>
 
-    <section class="welcome-area">
-        <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-           <h2><span class="text-green">ABOUT</span> <span class="text-white"> OPTICAL MOTION PICTURES</span> <span class="text-red">(OMPIXS)</span></h2>
-           <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
-           <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
-           <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
-           <p>Ompixs offers a wide range of services, including multimedia and live events, film and drama production, corporate profiles and documentaries, reality and film shows, commercials and online content, and live streaming, among others. We take pride in our commitment to quality and providing a customer-centric experience. Our team is dedicated to serving clients and ensuring a memorable production experience.</p>
-        </div>
-      </section>
+                <div class="col-lg-3">
+                    <div class="sidebar-area d-lg-block d-none">
+                      <div class="sidebar-header">
+                        <h5 class="text-montserrat">Categories</h5>
+                        <div class="green-bot"></div>
+                      </div>
+                      <ul class="sidebar-menu">
+                        <li><a href="#un" class="active">Nikon <span class="la la-plus float-end"></span></a></li>
+                        <li><a href="#un">Canon <span class="la la-plus float-end"></span></a></li>
+                        <li><a href="#un">Sony <span class="la la-plus float-end"></span></a></li>
+                        <li><a href="#un">Alexa <span class="la la-plus float-end"></span></a></li>
+                      </ul>
 
-      <section class="services-area">
-        <div class="container">
-           <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-green">SERVICES</span></h2>
-           <!-- <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Below are the Services Rendered by Optical Motion Pictures (OMPIXS)</p> -->
-  
-           <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
-            <div class="col-md-6">
-               <div class="service-content">
-                  <span><i class="la la-plus"></i> Camera Rentals</span>
-               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="service-content">
-                 <span><i class="la la-plus"></i> Day Rate</span>
-              </div>
-           </div>
-           <div class="col-md-6">
-            <div class="service-content">
-               <span><i class="la la-plus"></i> Director of Photography</span>
-            </div>
-         </div>
-         <div class="col-md-6">
-          <div class="service-content">
-             <span><i class="la la-plus"></i> Local Production Crew</span>
-          </div>
-       </div>
-       <div class="col-md-6">
-        <div class="service-content">
-           <span><i class="la la-plus"></i> Documentary</span>
-        </div>
-     </div>
-     <div class="col-md-6">
-      <div class="service-content">
-         <span><i class="la la-plus"></i> Cooperate portfolio & events</span>
-      </div>
-   </div>
-   <div class="col-md-6">
-    <div class="service-content">
-       <span><i class="la la-plus"></i> Wedding Videography service</span>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="service-content">
-       <span><i class="la la-plus"></i> Reality TV Show</span>
-    </div>
-  </div>
-           </div>
-  
-           <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
-            <a href="#un" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
-          </div>
-  
-        </div>
-      </section>
+                      <br>
 
-      <section class="contact-area wow fadeInUp" data-wow-duration="1.5s">
-        <div class="container">
+                      <div class="sidebar-header">
+                        <h5 class="text-montserrat">Search Product</h5>
+                        <div class="green-bot"></div>
+                      </div>
 
-          <h1 class="text-berbas text-white">Contact Us</h1>
-          <div class="red-bot"></div>
+                      <form action="" method="get">
+                        <div class="form-group contact-group mt-3">
+                            <input type="text" name="name" id="name" class="form-control" placeholder="Brand/Product Name" required>
+                          </div>
+                        <div class="form-group mt-3 d-grid">
+                            <button type="submit" class="btn btn-search">Search Here <i class="fa fa-search"></i></button>
+                        </div>
+                      </form>
 
-          <div class="row">
-
-            <div class="col-lg-9 order-last order-lg-first">
-
-              <form action="" method="post">
-
-               <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3 mt-md-0">
-                    <label for="name" class="form-label">Name: </label>
-                    <input type="text" name="name" id="name" class="form-control" placeholder="Enter Name" required>
-                  </div>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3 mt-md-0">
-                    <label for="email" class="form-label">Email: </label>
-                    <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email" required>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3">
-                    <label for="tel" class="form-label">Phone Number: </label>
-                    <input type="tel" name="tel" id="tel" class="form-control" placeholder="Enter Phone Number" required>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3">
-                    <label for="topic" class="form-label">Subject: </label>
-                    <input type="topic" name="topic" id="topic" class="form-control" placeholder="Enter Subject" required>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group contact-group mt-3">
-                    <label for="msg" class="form-label">Message: </label>
-                    <textarea name="msg" id="msg" cols="30" rows="8" class="form-control" placeholder="Your Message" required></textarea>
-                  </div>
-                </div>
-               </div>
 
-               <div class="mt-4">
-                  <button type="submit" class="btn btn-submit">Submit <i class="fa fa-paper-plane-o"></i></button>
-               </div>
+                <div class="col-lg-9">
+                    <div class="mainarea-content ps-lg-3">
+                        <h2 class="text-barlow text-white ps-3 mb-3 mb-lg-2">Cameras</h2>
 
-              </form>
+                        <div class="container">
+                            <div class="row">
+                                
+                                <div class="col-md-4 col-6">
+                                    <div class="cam-item my-md-3 my-2">
+                                        <a href="#un" class="text-decoration-none">
+                                        <div class="slider-area project-slide p-3">
+                                           <img src="img/products/Canon-EOS-6D-Digital-SLR-Camera.jpg" alt="" class="img-slider">
+                                           <span class="item-head">Canon EOS 6D Digital SLR Camera</span>
+                                           <span class="item-body">Rent Canon EOS 6D Digital SLR Camera because it has ...</span>
+                                        </div>
+                                      </a>
+                                     </div>
+                                </div>
+
+                                <div class="col-md-4 col-6">
+                                    <div class="cam-item my-md-3 my-2">
+                                        <a href="#un" class="text-decoration-none">
+                                        <div class="slider-area project-slide p-3">
+                                           <img src="img/products/Canon-EOS-R5.jpg" alt="" class="img-slider">
+                                           <span class="item-head">Canon EOS R5</span>
+                                           <span class="item-body">Rent Canon EOS R5 Digital SLR Camera because it has ...</span>
+                                        </div>
+                                      </a>
+                                     </div>
+                                </div>
+
+                                <div class="col-md-4 col-6">
+                                    <div class="cam-item my-md-3 my-2">
+                                        <a href="#un" class="text-decoration-none">
+                                        <div class="slider-area project-slide p-3">
+                                           <img src="img/products/nikon-D7000.jpg" alt="" class="img-slider">
+                                           <span class="item-head">Nikon D7000</span>
+                                           <span class="item-body">Rent Nikon D7000 Digital SLR Camera because it has ...</span>
+                                        </div>
+                                      </a>
+                                     </div>
+                                </div>
+
+                                <div class="col-md-4 col-6">
+                                    <div class="cam-item my-md-3 my-2">
+                                        <a href="#un" class="text-decoration-none">
+                                        <div class="slider-area project-slide p-3">
+                                           <img src="img/products/Nikon-D750.jpg" alt="" class="img-slider">
+                                           <span class="item-head">Nikon D750</span>
+                                           <span class="item-body">Rent Nikon D750 Digital SLR Camera because it has ...</span>
+                                        </div>
+                                      </a>
+                                     </div>
+                                </div>
+
+                                <div class="col-md-4 col-6">
+                                    <div class="cam-item my-md-3 my-2">
+                                        <a href="#un" class="text-decoration-none">
+                                        <div class="slider-area project-slide p-3">
+                                           <img src="img/products/sony-alpha-a7-iii-mirrorless-digital-camera-with-28-70mm-lens.jpeg" alt="" class="img-slider">
+                                           <span class="item-head">Sony Alpha A7 III Mirrorless Digital Cam...</span>
+                                           <span class="item-body">Rent Sony Alpha A7 III Mirrorless Digital Camera With 28-70mm ...</span>
+                                        </div>
+                                      </a>
+                                     </div>
+                                </div>
+
+                                <div class="col-md-4 col-6">
+                                    <div class="cam-item my-md-3 my-2">
+                                        <a href="#un" class="text-decoration-none">
+                                        <div class="slider-area project-slide p-3">
+                                           <img src="img/products/sony-alpha-a7-mark-iii-mirrorless-camera.jpg" alt="" class="img-slider">
+                                           <span class="item-head">Sony Alpha A7 Mark III Mirrorless Camera</span>
+                                           <span class="item-body">Rent Sony Alpha A7 Mark III Mirrorless Camera because it has ...</span>
+                                        </div>
+                                      </a>
+                                     </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
 
             </div>
-
-            <div class="col-lg-3 order-first order-lg-last mt-2 mt-mt-0">
-
-              <div class="contact-info">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-home"></i></span> <span class="text-white">Address</span></h5>
-                <p class="font-14">Banana Island, Lagos, Nigeria.</p>
-              </div>
-
-              <div class="contact-info mt-3">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> <span class="text-white">Email</span></h5>
-                <p class="font-14">support@ompixs.com</p>
-              </div>
-
-              <div class="contact-info mt-3">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-phone"></i></span> <span class="text-white">Phone Number</span></h5>
-                <p class="font-14">+234-343-463-4839</p>
-              </div>
-
-            </div>
-
-          </div>
-
         </div>
     </section>
+
+    <div class="mobile-menu fixed-bottom d-lg-none d-block">
+        <div class="row">
+            <div class="col-6 g-0">
+              <a href="javascript:void(0);" class="d-block" id="menulink"><i class="fa fa-bars"></i> Menu</a>
+            </div>
+            <div class="col-6 g-0">
+              <a href="javascript:void(0);" class="d-block" id="filterlink"><i class="fa fa-search"></i> Filter</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="mobilemenu-area">
+        <div class="menu-head">
+            <span class="me-2 text-green" id="catback" style="cursor: pointer;"><i class="fa fa-long-arrow-left"></i></span> <span class="text-white">Categories</span>
+        </div>
+        <div class="container">
+            <ul class="sidebar-menu">
+                <li><a href="#un" class="active">Nikon <span class="la la-plus float-end"></span></a></li>
+                <li><a href="#un">Canon <span class="la la-plus float-end"></span></a></li>
+                <li><a href="#un">Sony <span class="la la-plus float-end"></span></a></li>
+                <li><a href="#un">Alexa <span class="la la-plus float-end"></span></a></li>
+              </ul>
+        </div>
+    </div>
+
+    <div class="filtermenu-area">
+        <div class="menu-head">
+            <span class="me-2 text-green" id="filterback" style="cursor: pointer;"><i class="fa fa-long-arrow-left"></i></span> <span class="text-white">Search Product</span>
+        </div>
+        <div class="container">
+            <form action="" method="get">
+                <div class="form-group contact-group mt-3">
+                    <input type="text" name="name" id="name" class="form-control" placeholder="Brand/Product Name" required>
+                  </div>
+                <div class="form-group mt-3 d-grid">
+                    <button type="submit" class="btn btn-search">Search Here <i class="fa fa-search"></i></button>
+                </div>
+              </form>
+        </div>
+    </div>
 
     <section class="profile-area">
         <div class="container">
@@ -413,6 +426,21 @@
           $('.select-control').select2({
             width: "100%",
           });
+        });
+      </script>
+
+      <script>
+        $('#menulink').click(function() {
+           $('.mobilemenu-area').show();
+        });
+        $('#filterlink').click(function() {
+           $('.filtermenu-area').show();
+        });
+        $('#catback').click(function() {
+            $('.mobilemenu-area').hide();
+        });
+        $('#filterback').click(function() {
+            $('.filtermenu-area').hide();
         });
       </script>
 
