--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a class="nav-link" href="profile.html">Profile</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="#" id="dropdownId"
+              <a class="nav-link" href="camera.html" id="dropdownId"
                 aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
                 <div class="abs-dropicon d-lg-none">
                   <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
@@ -740,7 +740,7 @@
               <li><a href="profile.html">Profile</a></li>
             </div>
             <div class="col-4">
-              <li><a href="#un">Cameras</a></li>
+              <li><a href="camera.html">Cameras</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Services</a></li>
