fixed service categories

--- a/about.html
+++ b/about.html
@@ -160,26 +160,34 @@
   
            <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
             <div class="col-md-6">
+              <a href="#un" class="text-decoration-none">
                <div class="service-content">
-                  <span><i class="la la-plus"></i> Camera Rentals</span>
+                  <span><i class="la la-plus"></i> Light</span>
                </div>
+              </a>
             </div>
             <div class="col-md-6">
+              <a href="#un" class="text-decoration-none">
               <div class="service-content">
-                 <span><i class="la la-plus"></i> Day Rate</span>
+                 <span><i class="la la-plus"></i> Audio Mixers</span>
               </div>
+            </a>
            </div>
            <div class="col-md-6">
+            <a href="#un" class="text-decoration-none">
             <div class="service-content">
-               <span><i class="la la-plus"></i> Director of Photography</span>
+               <span><i class="la la-plus"></i> Engineering Support</span>
             </div>
+          </a>
          </div>
          <div class="col-md-6">
+          <a href="#un" class="text-decoration-none">
           <div class="service-content">
-             <span><i class="la la-plus"></i> Local Production Crew</span>
+             <span><i class="la la-plus"></i> Local Crew Sourcing</span>
           </div>
+        </a>
        </div>
-       <div class="col-md-6">
+       <!-- <div class="col-md-6">
         <div class="service-content">
            <span><i class="la la-plus"></i> Documentary</span>
         </div>
@@ -198,12 +206,12 @@
     <div class="service-content">
        <span><i class="la la-plus"></i> Reality TV Show</span>
     </div>
-  </div>
+  </div> -->
            </div>
   
-           <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
+           <!-- <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
             <a href="#un" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
-          </div>
+          </div> -->
   
         </div>
       </section>
