adjusted product index page on phone view

--- a/camera.html
+++ b/camera.html
@@ -175,7 +175,7 @@
                         <div class="container">
                             <div class="row">
                                 
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-6 g-3 g-md-4">
                                     <div class="cam-item my-md-3 my-2">
                                         <a href="#un" class="text-decoration-none">
                                         <div class="slider-area project-slide p-3">
@@ -187,7 +187,7 @@
                                      </div>
                                 </div>
 
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-6 g-3 g-md-4">
                                     <div class="cam-item my-md-3 my-2">
                                         <a href="#un" class="text-decoration-none">
                                         <div class="slider-area project-slide p-3">
@@ -199,7 +199,7 @@
                                      </div>
                                 </div>
 
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-6 g-3 g-md-4">
                                     <div class="cam-item my-md-3 my-2">
                                         <a href="#un" class="text-decoration-none">
                                         <div class="slider-area project-slide p-3">
@@ -211,7 +211,7 @@
                                      </div>
                                 </div>
 
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-6 g-3 g-md-4">
                                     <div class="cam-item my-md-3 my-2">
                                         <a href="#un" class="text-decoration-none">
                                         <div class="slider-area project-slide p-3">
@@ -223,7 +223,7 @@
                                      </div>
                                 </div>
 
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-6 g-3 g-md-4">
                                     <div class="cam-item my-md-3 my-2">
                                         <a href="#un" class="text-decoration-none">
                                         <div class="slider-area project-slide p-3">
@@ -235,7 +235,7 @@
                                      </div>
                                 </div>
 
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-6 g-3 g-md-4">
                                     <div class="cam-item my-md-3 my-2">
                                         <a href="#un" class="text-decoration-none">
                                         <div class="slider-area project-slide p-3">
