changed cameras to equipments

--- a/camera.html
+++ b/camera.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>OMPIXS - Cameras</title>
+  <title>OMPIXS - Equipments</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -76,7 +76,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link active" href="camera.html" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
+                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Equipments</a>
                   <div class="abs-dropicon d-lg-none">
                     <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
                 </div>
@@ -170,7 +170,7 @@
 
                 <div class="col-lg-9">
                     <div class="mainarea-content ps-lg-3">
-                        <h2 class="text-barlow text-white ps-3 mb-2 mb-lg-2">Cameras</h2>
+                        <h2 class="text-barlow text-white ps-3 mb-2 mb-lg-2">Equipments</h2>
 
                         <div class="container">
                             <div class="row">
@@ -338,7 +338,7 @@
               <li><a href="profile.html">Profile</a></li>
             </div>
             <div class="col-4">
-              <li><a href="camera.html">Cameras</a></li>
+              <li><a href="camera.html">Equipments</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Services</a></li>
