--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="camera.html" id="dropdownId"
-                aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
+                aria-haspopup="true" aria-expanded="false" class="camera-drop">Equipments</a>
                 <div class="abs-dropicon d-lg-none">
                   <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
               </div>
@@ -168,8 +168,8 @@
           <div class="row">
             <div class="col-lg-6">
             <div class="banner-textarea">
-              <h1 class="text-uppercase text-berbas"><span class="text-white">Camera</span> <span class="text-green">Rentals</span></h1>
-              <p class="font-300">We also make provisions for Rental of Cameras of Good Quality that would serve you excellently for your events.</p>
+              <h1 class="text-uppercase text-berbas"><span class="text-white">Rentals of </span> <span class="text-green">Media</span> <span class="text-white">Equipments</span></h1>
+              <p class="font-300">We also make provisions for Rental of Media/Production Equipments of Good Quality that would serve you excellently for your events.</p>
               <div class="banner-button mt-3">
                   <a href="#un" class="btn btn-banner text-barlow text-uppercase">Contact Us</a>
               </div>
@@ -208,7 +208,7 @@
 
     <section class="welcome-area">
       <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY AND</span> <span class="text-red">CAMERA RENTALS</span></h2>
+         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY AND</span> <span class="text-red">EQUIPMENT RENTALS</span></h2>
          <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
          <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
          <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
@@ -748,7 +748,7 @@
               <li><a href="profile.html">Profile</a></li>
             </div>
             <div class="col-4">
-              <li><a href="camera.html">Cameras</a></li>
+              <li><a href="camera.html">Equipments</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Services</a></li>
