edited show page

--- a/show.html
+++ b/show.html
@@ -171,7 +171,7 @@
                          <p><span>Product Name : </span> Nikon D7000</p>
                          <p><span>Category : </span> Nikon</p>
                        </div>
-                       <p class="note-rental"><span class="text-green font-400">Note :</span> Fill the <a href="#un">form</a> on this page or call <a href="#un">+234-343-463-4839</a> to request for this product.</p>
+                       <p class="note-rental"><span class="text-green font-400">Note :</span> Fill the <a href="#rentform">form</a> on this page or call <a href="#un">+234-343-463-4839</a> to request for this product.</p>
                     </div>
 
                    </div>
@@ -186,7 +186,7 @@
 
                 </div>
 
-                <div class="col-lg-4 mt-5 mt-lg-0">
+                <div class="col-lg-4 mt-5 mt-lg-0" id="rentform">
 
                     <div class="sidebar-header">
                         <h5 class="text-montserrat text-white text-uppercase">Request for Rental</h5>
